<resources>
    <string name="app_name">Movies and Shows</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">insomniacgks@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="now_playing">In Theatres</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="tv_movie">TV Movie</string>
    <string name="western">Western</string>
    <string name="war">War</string>
    <string name="thriller">Thriller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_the_air">On The Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movie_overview">Movie Overview:</string>
    <string name="action_amp_adventure"><![CDATA[Action & Adventure]]></string>
    <string name="kids">Kids</string>
    <string name="news">News</string>
    <string name="reality">Reality</string>
    <string name="sci_fi_amp_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
    <string name="soap">Soap</string>
    <string name="war_amp_politics"><![CDATA[War & Politics]]></string>
    <string name="show_overview">Show Overview</string>
    <string name="search">Search</string>
    <string name="no_data_available">No Data Available!</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
